// Vitest Snapshot v1

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement css-1k0udpq-StyledRoot e19ah2h63"
  >
    <div
      class="css-1728172-StyledContainer e19ah2h62"
    >
      <div
        class="css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-dngten-StyledIcon e19ah2h60"
      />
      <div
        class="MuiCardHeader-root  e1u3cqlo0 css-1ebgaor-MuiCardHeader-root-StyledHeader"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
          >
            mockTitle
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
          >
            mockSubtitle
          </span>
        </div>
      </div>
      <img
        alt="mockImg"
        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img eawuy7p0 css-17tnzdv-MuiCardMedia-root-StyledMedia"
        role="img"
      />
      <div
        class="MuiCardContent-root  es2bop10 css-a04jz9-MuiCardContent-root-StyledContent"
      >
        <p
          class="css-nvh5te-StyledTypography e1bct5r50"
        >
          mockCardContent
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement css-1k0udpq-StyledRoot e19ah2h63"
  >
    <div
      class="css-1728172-StyledContainer e19ah2h62"
    >
      <div
        class="css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-dngten-StyledIcon e19ah2h60"
      />
      <div
        class="MuiCardContent-root  es2bop10 css-a04jz9-MuiCardContent-root-StyledContent"
      >
        <p
          class="css-nvh5te-StyledTypography e1bct5r50"
        >
          mockCardContent
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement css-1k0udpq-StyledRoot e19ah2h63"
  >
    <div
      class="css-1728172-StyledContainer e19ah2h62"
    >
      <div
        class="css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-dngten-StyledIcon e19ah2h60"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement css-1k0udpq-StyledRoot e19ah2h63"
  >
    <div
      class="css-1728172-StyledContainer e19ah2h62"
    >
      <div
        class="css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-dngten-StyledIcon e19ah2h60"
      />
      <div
        class="MuiCardHeader-root  e1u3cqlo0 css-1ebgaor-MuiCardHeader-root-StyledHeader"
      >
        <div
          class="MuiCardHeader-content css-1qbkelo-MuiCardHeader-content"
        >
          <span
            class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title css-1qvr50w-MuiTypography-root"
          >
            mockTitle
          </span>
          <span
            class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader css-nrdprl-MuiTypography-root"
          >
            mockSubtitle
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement css-1k0udpq-StyledRoot e19ah2h63"
  >
    <div
      class="css-1728172-StyledContainer e19ah2h62"
    >
      <div
        class="css-mez56c-StyledBar e19ah2h61"
      />
      <div
        class="css-dngten-StyledIcon e19ah2h60"
      />
      <img
        alt="mockImg"
        class="MuiCardMedia-root MuiCardMedia-media MuiCardMedia-img eawuy7p0 css-17tnzdv-MuiCardMedia-root-StyledMedia"
        role="img"
      />
    </div>
  </div>
</div>
`;
